--- a/shakespeare.ipynb
+++ b/shakespeare.ipynb
@@ -260,7 +260,7 @@
    "source": [
     "history = model.fit(dataset, steps_per_epoch=train_size // batch_size,\n",
     "                   epochs=10)\n",
-    "model.save(\"shakespeare.h5\")dfs"
+    "model.save(\"shakespeare.h5\")"
    ]
   }
  ],
