--- a/shakespeare.ipynb
+++ b/shakespeare.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Reference : https://www.tensorflow.org/text/tutorials/text_generation\n",
+    "\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "import numpy as np\n",
-    "\n",
     "\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)\n",
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1391,6 +1392,49 @@
     "for para,temp in para_list:\n",
     "    print(temp)\n",
     "    print(para)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temperature set to 1 or 1.2 would be the best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3483/3483 [==============================] - 1271s 365ms/step - loss: 1.6047\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.604728102684021"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_dataset = tf.data.Dataset.from_tensor_slices(encoded[train_size:])\n",
+    "test_dataset = test_dataset.window(101, shift=1, drop_remainder=True)\n",
+    "test_dataset = test_dataset.flat_map(lambda window: window.batch(101))\n",
+    "test_dataset = test_dataset.batch(32)\n",
+    "test_dataset = test_dataset.map(lambda windows: (windows[:, :-1], windows[:, 1:]))\n",
+    "test_dataset = test_dataset.map(\n",
+    "    lambda X_batch, Y_batch: (tf.one_hot(X_batch, depth=max_id), Y_batch))\n",
+    "model.evaluate(test_dataset)"
    ]
   }
  ],
