--- a/shakespeare.ipynb
+++ b/shakespeare.ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "filepath =r\"C:\\Users\\hp\\Desktop\\ML Models\\RNNs\\shakespeare.txt\"\n",
+    "filepath =r\"\\shakespeare.txt\"\n",
     "with open(filepath) as f:\n",
     "    shakespeare_text = f.read()\n",
     "print(shakespeare_text[:148])\n",
@@ -261,7 +261,7 @@
     }
    ],
    "source": [
-    "model = keras.models.load_model(r\"C:\\Users\\hp\\Desktop\\ML Models\\RNNs\\shakespeare.h5\")\n",
+    "model = keras.models.load_model(r\"\\shakespeare.h5\")\n",
     "\n",
     "# creating functions to preprocvess like earlier for inputs\n",
     "def preprocess(texts):\n",
